# ansible-tf2network

./: .gitignore  Makefile  README.md  ansible.cfg  flake.nix  inventory.yml  inventory.yml.sample  manifest.py  requirements.txt
.github/: FUNDING.yml
.hooks/: pre-commit
group_vars/: tf2.secret.yml  tf2.secret.yml.sample  tf2.yml  tf2.yml.sample
host_vars/: bff.secret.yml  bff.yml  controlpoint.secret.yml  controlpoint.yml  eu1.secret.yml  eu1.yml  host.secret.yml.sample  host.yml.sample  na-1.secret.yml  na-1.yml  nae-1.secret.yml  nae-1.yml  respawnroom.secret.yml  respawnroom.yml  tf-eu-1.jackavery.ca.secret.yml  tf-eu-1.jackavery.ca.yml  tf-nae-1.jackavery.ca.secret.yml  tf-nae-1.jackavery.ca.yml  tf-naw.jackavery.ca.secret.yml  tf-naw.jackavery.ca.yml
playbooks/: admins.yml  base-tf2server.yml  cron.yml  deploy.yml  gen_admins.yml  relay-deploy.yml  relay.yml  sbpp-install.yml  sbpp.yml  secrets.yml  setup.yml  sourcemod.yml  srcds.yml  ssh-auth.yml  ssh-gen.yml  teardown.yml  update.yml
playbooks/templates/: admins_simple.ini.j2
roles/admins/tasks/: main.yml
roles/admins/templates/: admins_simple.ini.j2
roles/base-tf2server/files/: Containerfile  Dockerfile  update.sh
roles/base-tf2server/tasks/: main.yml
roles/deploy/files/: updater.sh
roles/deploy/tasks/: main.yml
roles/deploy/templates/: docker-compose.yml.j2  (+4 more)
roles/relay/files/: Cargo.toml  Dockerfile  __main__.py  build.sh  requirements.txt
roles/relay/files/src/: config.rs  error.rs  main.rs  manifest.rs  state.rs
roles/relay/files/src/commands/: mod.rs  rcon.rs  servers.rs
(+345 files in other folders)
